reverse arrays and add montana total

--- a/index.html
+++ b/index.html
@@ -2,62 +2,31 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Covid-19 Data</title>
+
+    <!-- bootstrap stylesheet -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <!-- d3.js -->
     <script src="https://d3js.org/d3-dsv.v1.min.js"></script>
     <script src="https://d3js.org/d3-fetch.v1.min.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="chart-container-top-countries" style="position: relative; height:120vh; width:90vw">
-        <canvas id="myChart"></canvas>
+    <div class="container">
+      <div class="row">
+        <div class="chart-container-top-countries" style="position: relative; height:120vh; width:90vw">
+            <canvas id="myChart"></canvas>
+        </div>
+      </div>
+      <div class="row">
+        <h2 id="montanaTotal"></h2>
+        <div class="chart-container-Montana" style="position: relative; height:120vh; width:90vw">
+          <canvas id="myChartMontana"></canvas>
+        </div>
+      </div>
     </div>
-    <div class="chart-container-Montana" style="position: relative; height:120vh; width:90vw">
-      <canvas id="myChartMontana"></canvas>
-    </div>
-<script>
-
-/*
-var ctx = document.getElementById('myChart').getContext('2d');
-var myChart = new Chart(ctx, {
-    type: 'bar',
-    data: {
-        labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-        datasets: [{
-            label: '# of Votes',
-            data: [12, 19, 3, 5, 2, 3],
-            backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(255, 159, 64, 0.2)'
-            ],
-            borderColor: [
-                'rgba(255, 99, 132, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)'
-            ],
-            borderWidth: 1
-        }]
-    },
-    options: {
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero: true
-                }
-            }]
-        }
-    }
-});
-*/
-</script>
-
 
       <script>
         <!-- historical data -->
@@ -85,12 +54,6 @@ var myChart = new Chart(ctx, {
 
           console.log(countriesSorted);
 
-
-
-
-
-
-
             var countries = countriesSorted.filter(function (data){
               return data.confirmed > numberofconfirmed;
             }).map(function (data){
@@ -102,43 +65,10 @@ var myChart = new Chart(ctx, {
               return data.confirmed;
             });
 
-            /*
-            var countries = function (obj) {
-                //sort results
-                var sortable = [];
-                for (var country in countries) {
-                    sortable.push([country, countries[country]]);
-                }
+            // reverse arrays for display left to right
+            countries = countries.reverse();
+            confirmed = confirmed.reverse();
 
-                sortable.sort(function(a, b) {
-                    return a[1] - b[1];
-                });
-
-                var countriesSorted = {}
-                sortable.forEach(function(item){
-                    countriesSorted[item[0]]=item[1]
-                })
-              };
-
-              var confirmed = function (obj) {
-                  //sort results
-                  var sortable = [];
-                  for (var country in countries) {
-                      sortable.push([country, countries[country]]);
-                  }
-
-                  sortable.sort(function(a, b) {
-                      return a[1] - b[1];
-                  });
-                  var confirmedSorted = {}
-                  sortable.forEach(function(item){
-                      confirmedSorted[item[0]]=item[1]
-                  })
-                };
-            */
-            //console.log(countriesSorted);
-            //console.log(confirmed);
-            //console.log(cdata);
             var ctx = document.getElementById('myChart').getContext('2d');
             var myChart = new Chart(ctx, {
                 type: 'bar',
@@ -193,16 +123,21 @@ var myChart = new Chart(ctx, {
               var counties = countiesSorted.filter(function (data){
                 return data.location.substr(-7) === "Montana";
               }).map(function (data){
-                return data.location.slice(0, -15);;
+                return data.location.slice(0, -15);
               });
               var cconfirmed = countiesSorted.filter(function (data){
                   return data.location.substr(-7) === "Montana";
               }).map(function (data){
                 return data.confirmed;
               });
-              //console.log(counties);
-              //console.log(cconfirmed);
-              //console.log(mdata);
+
+              // total for state
+              stateTotal = cconfirmed.reduce(function(a, b){return a+b;});
+              updateStateTotal(stateTotal);
+              // reverse arrays for display
+              counties = counties.reverse();
+              cconfirmed = cconfirmed.reverse();
+
               var ctx = document.getElementById('myChartMontana').getContext('2d');
               var myChart = new Chart(ctx, {
                   type: 'bar',
@@ -232,21 +167,9 @@ var myChart = new Chart(ctx, {
 
             });
 
-            var objSort = function (obj) {
-                //sort results
-                var sortable = [];
-                for (var country in countries) {
-                    sortable.push([country, countries[country]]);
-                }
-
-                sortable.sort(function(a, b) {
-                    return a[1] - b[1];
-                });
-                var objSorted = {}
-                sortable.forEach(function(item){
-                    objSorted[item[0]]=item[1]
-                })
-              };
+             var updateStateTotal = function (n) {
+               $("#montanaTotal").html('Montana Total Confirmed Cases ' + n);
+             }
 
               var randomColorGenerator = function (l) {
                 //console.log(l);
@@ -256,6 +179,11 @@ var myChart = new Chart(ctx, {
                 }
                 return colorArray;
               };
+
       </script>
+      <!-- Bootstrap javascript -->
+
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
