remove call for historical data.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
       <script>
         <!-- historical data -->
-        d3.csv("https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_US.csv").then(function(data) {
+        //d3.csv("https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_US.csv").then(function(data) {
         //  console.log(data); // [{"Hello": "world"}, …]
-        });
+        //});
 
         const numberofconfirmed = 50000;
         const proxyurl = "https://cors-anywhere.herokuapp.com/";
