change sizes as data attribution

--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
   </head>
   <body>
     <div class="container">
+      <h1>COVID-19 Data Charts</h1>
+        <p class="lead">Data provided by <a href="https://www.trackcorona.live">www.trackcorona.live</a></p> 
       <div class="row">
-        <div class="chart-container-top-countries" style="position: relative; height:120vh; width:90vw">
+        <h2>Countries with over 50,000 confirmed cases</h2>
+        <div class="chart-container-top-countries" style="position: relative; height:80vh; width:100vw">
             <canvas id="myChart"></canvas>
         </div>
       </div>
       <div class="row">
         <h2 id="montanaTotal"></h2>
-        <div class="chart-container-Montana" style="position: relative; height:120vh; width:90vw">
+        <div class="chart-container-Montana" style="position: relative; height:80vh; width:100vw">
           <canvas id="myChartMontana"></canvas>
         </div>
       </div>
