add heading for Montana chart.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </div>
       <div class="row">
         <h2 id="montanaTotal"></h2>
+        <p class="lead">Confirmed Cases by county in Montana</a></p>
         <div class="chart-container-Montana" style="position: relative; height:100vh; width:100vw">
           <canvas id="myChartMontana"></canvas>
         </div>
