--- a/index.html
+++ b/index.html
@@ -15,19 +15,31 @@
   </head>
   <body>
     <div class="container">
-      <h1>COVID-19 Data Charts</h1>
-        <p class="lead">Data provided by <a href="https://www.trackcorona.live">www.trackcorona.live</a></p>
       <div class="row">
-        <h2>Countries with over 50,000 confirmed cases</h2>
-        <div class="chart-container-top-countries" style="position: relative; height:100vh; width:100vw">
-            <canvas id="myChart"></canvas>
+        <div class="col">
+          <h1>COVID-19 Data Charts</h1>
+          <h2>Data provided by <a href="https://www.trackcorona.live">www.trackcorona.live</a></h2>
         </div>
       </div>
       <div class="row">
-        <h2 id="montanaTotal"></h2>
-        <p class="lead">Confirmed Cases by county in Montana</a></p>
-        <div class="chart-container-Montana" style="position: relative; height:100vh; width:100vw">
-          <canvas id="myChartMontana"></canvas>
+        <div class="col">
+          <h3>Countries with over 50,000 confirmed cases</h3>
+          <div class="chart-container-top-countries" style="position: relative; height:100%; width:100%">
+              <canvas id="myChart"></canvas>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h2 id="montanaTotal">Montana Total Confirmed Cases</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h3>Confirmed Cases by county in Montana</h3>
+          <div class="chart-container-Montana" style="position: relative; height:100%; width:100%">
+            <canvas id="myChartMontana"></canvas>
+          </div>
         </div>
       </div>
     </div>
