--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="row">
         <div class="col">
           <h1>COVID-19 Data Charts</h1>
-          <h2>Data provided by <a href="https://www.trackcorona.live">www.trackcorona.live</a></h2>
+          <p class="lead">Data provided by <a href="https://www.trackcorona.live">www.trackcorona.live</a></p>
         </div>
       </div>
       <div class="row">
